Eiger company profile

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           </div>
           <div class="swiper-slide">
             <div class="card" style="width: 40rem;">
-              <img src="/img/card4.png" class="card-img-top" alt="...">
+              <img src="/img/card3.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">Pemimpin pasar dalam industri tas dan petualangan di Indonesia</p>
               </div>
@@ -210,19 +210,19 @@
         <div class="mySwiper1">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img src="/img/swiper1_1.png" alt="">
+              <img src="/img/swiper1.png" alt="">
             </div>
             <div class="swiper-slide">
-              <img src="/img/swiper1_2.png" alt="">
+              <img src="/img/swiper2.png" alt="">
             </div>
             <div class="swiper-slide">
-              <img src="/img/swiper1_3.png" alt="">
+              <img src="/img/swiper3.png" alt="">
             </div>
             <div class="swiper-slide">
-              <img src="/img/swiper1_4.png" alt="">
+              <img src="/img/swiper4.png" alt="">
             </div>
             <div class="swiper-slide">
-              <img src="/img/swiper1_5.png" alt="">
+              <img src="/img/swiper5.png" alt="">
             </div>
           </div>
           <div class="swiper-pagination"></div>
@@ -232,12 +232,6 @@
     <section>
       <div class="container">
         <div class="row">
-          <!-- <div class="col">
-            <img src="/img/eiger.png" alt="" class="w-100">
-          </div>
-          <div class="col">
-            <img src="/img/eiger2.png" alt="" class="w-100">
-          </div> -->
           <div class="col">
             <p class="centered">
               Mari Berkolaborasi
