Company Profile Eiger

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-transparent pt-4">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="img/logo.png" alt="eiger-logo.png">
+        <img src="logo.png" alt="eiger-logo.png">
       </a>
       <button class="navbar-toggler float-end" type="button" data-bs-toggle="collapse"
         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -58,7 +58,7 @@
 
   <header class="text-center">
     <h1 class="header">Lengkapi Petualangan Anda <br> Bersama Eiger Tropical Adventure!</h1>
-    <img src="img/header-cover.png" alt="header-cover">
+    <img src="header-cover.png" alt="header-cover">
   </header>
 
   <!-- Main -->
@@ -83,12 +83,12 @@
         </p>
       </div>
       <div class="col-sm align-self-center">
-        <img src="img/tentang.png" class="float-end" alt="tentang.png">
+        <img src="tentang.png" class="float-end" alt="tentang.png">
       </div>
     </section>
     <section class="visi-misi row">
       <div class="col-sm align-self-center">
-        <img src="img/visi-misi.png" alt="tentang.png">
+        <img src="visi-misi.png" alt="tentang.png">
       </div>
       <div class="col-sm">
         <div class="visi-misi-content float-end">
@@ -122,22 +122,22 @@
 
       <div class="row">
         <div class="col-md">
-          <img class="" src="img/icon1.png" alt="gambar alam">
+          <img class="" src="icon1.png" alt="gambar alam">
         </div>
         <div class="col-md">
-          <img class="" src="img/icon2.png" alt="gambar alam">
+          <img class="" src="icon2.png" alt="gambar alam">
         </div>
         <div class="col-md">
-          <img class="" src="img/icon3.png" alt="gambar alam">
+          <img class="" src="icon3.png" alt="gambar alam">
         </div>
         <div class="col-md">
-          <img class="" src="img/icon4.png" alt="gambar alam">
+          <img class="" src="icon4.png" alt="gambar alam">
         </div>
         <div class="col-md">
-          <img class="" src="img/icon5.png" alt="gambar alam">
+          <img class="" src="icon5.png" alt="gambar alam">
         </div>
         <div class="col-md">
-          <img class="" src="img/icon6.png" alt="gambar alam">
+          <img class="" src="icon6.png" alt="gambar alam">
         </div>
       </div>
       <br><br><br>
@@ -148,7 +148,7 @@
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="card" style="width: 40rem;">
-              <img src="/img/card1.png" class="card-img-top" alt="...">
+              <img src="card1.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">3 Toko Flagship, 34 ruang pamer, dan 81 counter di seluruh Indonesia.</p>
               </div>
@@ -156,7 +156,7 @@
           </div>
           <div class="swiper-slide">
             <div class="card" style="width: 40rem;">
-              <img src="/img/card2.png" class="card-img-top" alt="...">
+              <img src="card2.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">Top 250 Produk asli Indonesia oleh majalah bisnis terkemuka Swa.</p>
               </div>
@@ -164,7 +164,7 @@
           </div>
           <div class="swiper-slide">
             <div class="card" style="width: 40rem;">
-              <img src="/img/card3.png" class="card-img-top" alt="...">
+              <img src="card3.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">Pemimpin pasar dalam industri tas dan petualangan di Indonesia</p>
               </div>
@@ -172,7 +172,7 @@
           </div>
           <div class="swiper-slide">
             <div class="card" style="width: 40rem;">
-              <img src="/img/card4.png" class="card-img-top" alt="...">
+              <img src="card4.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <p class="card-text">Memiliki outlet terbesar di dunia dengan luas 1.500 meter dengan aristektur bergaya
                   alam.</p>
@@ -210,19 +210,19 @@
         <div class="mySwiper1">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img src="/img/swiper1.png" alt="">
+              <img src="swiper1.png" alt="">
             </div>
             <div class="swiper-slide">
-              <img src="/img/swiper2.png" alt="">
+              <img src="swiper2.png" alt="">
             </div>
             <div class="swiper-slide">
-              <img src="/img/swiper3.png" alt="">
+              <img src="swiper3.png" alt="">
             </div>
             <div class="swiper-slide">
-              <img src="/img/swiper4.png" alt="">
+              <img src="swiper4.png" alt="">
             </div>
             <div class="swiper-slide">
-              <img src="/img/swiper5.png" alt="">
+              <img src="swiper5.png" alt="">
             </div>
           </div>
           <div class="swiper-pagination"></div>
@@ -240,7 +240,7 @@
               Melalui kolaborasi, mari berpangku tangan memberi nilai dan memberikan dampak, menyokong perkembangan
               industri.</p>
             <button class="btn btn-outline-light1" type="submit">Mari Kolaborasi</button>
-            <img src="/img/eiger.png" alt="" class="w-100">
+            <img src="eiger.png" alt="" class="w-100">
           </div>
           <div class="col">
             <p class="mari-gabung">
@@ -249,7 +249,7 @@
             <p class="mari-gabung-desc"> Kami menyediakan ekosistem kerja terbaik untuk para pencipta muda berkarya dan
               meninggalkan jejak di dunia. Mari bergabung.</p>
             <button class="btn btn-outline-light2" type="submit">Mari Bergabung</button>
-            <img src="/img/eiger2.png" alt="" class="w-100">
+            <img src="eiger2.png" alt="" class="w-100">
           </div>
         </div>
       </div>
@@ -336,16 +336,16 @@
         <div class="icon">
           <div class="row">
             <div class="col">
-              <img src="img/akar-icons_facebook-fill.png" alt="" class="" >
+              <img src="akar-icons_facebook-fill.png" alt="" class="" >
             </div>
             <div class="col">
-              <img src="img/akar-icons_instagram-fill.png" alt="" class="" >
+              <img src="akar-icons_instagram-fill.png" alt="" class="" >
             </div>
             <div class="col">
-              <img src="img/akar-icons_twitter-fill.png" alt="" class="" >
+              <img src="akar-icons_twitter-fill.png" alt="" class="" >
             </div>
             <div class="col">
-              <img src="img/akar-icons_youtube-fill.png" alt="" class="" >
+              <img src="akar-icons_youtube-fill.png" alt="" class="" >
             </div>
           </div>
         </div>
